--- a/util/sugar/src/scss/_sugar.scss
+++ b/util/sugar/src/scss/_sugar.scss
@@ -4,6 +4,8 @@
 @import 'coffeekraken/all';
 @import 'effect/all';
 @import 'form/all';
+@import 'format/all';
+@import 'grid/all';
 @import 'helper/all';
 @import 'icon/all';
 @import 'image/all';
