--- a/util/sugar/src/scss/core/init/_all.scss
+++ b/util/sugar/src/scss/core/init/_all.scss
@@ -1,3 +1,7 @@
 @import 'body';
+@import 'border-box';
 @import 'dom-settings';
 @import 'font';
+@import 'links';
+@import 'modular-scale';
+@import 'typography';
