--- a/util/sugar/src/scss/core/typography/_all.scss
+++ b/util/sugar/src/scss/core/typography/_all.scss
@@ -1,4 +1,5 @@
 @import "show-vertical-rhythm";
 @import "text-format-class";
+@import 'text-format-scope';
 @import "vertical-rhythm-class";
-@import "vertical-rhythm";
+@import "vertical-rhythm-scope";
