--- a/util/sugar/src/scss/helper/_size.scss
+++ b/util/sugar/src/scss/helper/_size.scss
@@ -11,7 +11,7 @@
  *
  * @example 	scss
  * .my-cool-image {
- * 	\@include sugar.size(cover);
+ * 	\@include Sugar.size(cover);
  * }
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
