--- a/util/sugar/public/src/scss/03_generic/_all.scss
+++ b/util/sugar/public/src/scss/03_generic/_all.scss
@@ -2,4 +2,4 @@
  * Generic
  * All the generic codebase for the project like typography, resets, etc...
  */
-@import 'reset';
+@import 'text-format';
