--- a/util/sugar/public/src/scss/04_templates/_header.scss
+++ b/util/sugar/public/src/scss/04_templates/_header.scss
@@ -5,6 +5,7 @@
   display: block;
   @include Sugar.position(fixed, top, left, $top: 50px, $left: 50px);
   @include Sugar.vertical-aligner();
+  border-radius: Sugar.look-and-feel(border-radius);
   padding: 0 10px;
 }
   .ck-header__logo {
@@ -14,3 +15,34 @@
   .ck-header__title {
     color: Sugar.color(white);
   }
+
+
+.grid-1 {
+  @include Sugar.grid-layout((
+    '1 1 1 1 1 1 1 2 2 2 2 6',
+    '3 3 3 3 3 3 9 9 4 4 4 6',
+    '3 3 3 3 3 3 9 9 5 5 5 6'
+  ));
+
+  height: 100vh;
+
+  .area-1 {
+    background: red;
+  }
+  .area-2 {
+    background: blue;
+  }
+  .area-3 {
+    background: yellow;
+  }
+  .area-4 {
+    background: green;
+  }
+  .area-5 {
+    background: magenta;
+  }
+  .area-9 {
+    background: cyan;
+  }
+
+}
