--- a/util/sugar/public/src/scss/06_organisms/_all.scss
+++ b/util/sugar/public/src/scss/06_organisms/_all.scss
@@ -4,3 +4,4 @@
  * An organism can contain other molecules or atoms and does not have to relay on his ancestors
  * to be properly displayed.
  */
+@import 'marked';
