--- a/util/sugar/src/scss/core/size/_interpolate.scss
+++ b/util/sugar/src/scss/core/size/_interpolate.scss
@@ -8,13 +8,13 @@
  * Return the specified or calculated value of the given stack and size
  * depending on the settings.sizes ratios stack
  *
- * @param 		{Map} 			$stack 			The stack from which to interpolate the value
+ * @param 		{Map} 			$value 			The stack from which to interpolate the value
  * @param 		{String} 		$size 			The size wanted (has to exist in the settings.sizes stack)
- * @return 		{Number} 						The $stack.$size value or the interpolated one depending on the settings.sizes ratios
+ * @return 		{Number} 						The $value.$size value or the interpolated one depending on the settings.sizes ratios
  *
  * @example     scss
  * // settings.sizes
- * \@include sugar.setup((
+ * \@include Sugar.setup((
  * 		sizes : (
  * 			small : 0.5,
  * 			default : 1, // default is ALWAYS 1
@@ -27,55 +27,35 @@
  * 		big : 6rem
  * )
  *
- * sugar.interpolate($myStack, big) // 6rem cause specified in the $myStack value
- * sugar.interpolate($myStack, small) // 1.5rem => calculated like : 3rem * 0.5 = 1.5rem
+ * Sugar.interpolate($myStack, big) // 6rem cause specified in the $myStack value
+ * Sugar.interpolate($myStack, small) // 1.5rem => calculated like : 3rem * 0.5 = 1.5rem
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@function interpolate($stack, $size) {
-  @if not $stack or meta.type-of($stack) != string {
-    @error ('The value "#{$stack}" is not a settings path');
-  }
+@function interpolate($value, $size) {
 
-  // get the value
-  $value: setting("#{$stack}.#{$size}");
-
-  // if we have a value with units, return
-  @if $value and not math.is-unitless($value) {
-    @return $value;
-  }
+  $value: test-argument(
+    'sugar.interpolate',
+    'value',
+    number,
+    $value
+  );
+  $size: test-argument(
+    'sugar.interpolate',
+    'size',
+    string,
+    $size
+  );
 
   // get what we need to interpolate the value
   $ratio: setting("sizes.#{$size}");
-  $default-size: setting("#{$stack}.default");
 
-  // if the getted value is a unitless one, mean that it's the ratio to use
-  // to interpolate the default stack value
-  @if $value and math.is-unitless($value) {
-    $ratio: $value;
-  }
-
-  // protect
-  @if not $default-size {
-    @error ("You need to specify a #{$stack}.default setting...");
-  }
-  @if not math.unit($default-size) {
-    @error ("Your #{$stack}.default has to have a unit like rem, px, etc...");
-  }
   @if not $ratio {
-    @error ("You need to have the sizes.#{$size} specified in order to interpolate the value to this size...");
+    @error ('You have to specify a config.sizes.#{$size} ratio');
   }
 
-  // if no value, interpolate the default one with the size ratio
-  @if not $value or math.is-unitless($value) {
-    @return $default-size * $ratio;
+  @if meta.type-of($value) == number {
+    @return $value * $ratio;
   }
 
-  // if not number
-  @if meta.type-of($value) != number {
-    @error ('You cannot interpolate the value "#{$value}" cause it is not a number...');
-  }
-
-  // default return the value
-  @return $value;
 }
