--- a/util/sugar/src/scss/core/space/_space.scss
+++ b/util/sugar/src/scss/core/space/_space.scss
@@ -16,5 +16,5 @@
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
 @function space($size) {
-  @return interpolate("spaces", $size);
+  @return setting('spaces.#{$size}');
 }
