--- a/webcomponents/s-filtrable-input/src/scss/index.scss
+++ b/webcomponents/s-filtrable-input/src/scss/index.scss
@@ -1,3 +1,28 @@
 .s-filtrable-input {
-  // background: Sugar.color(primary);
+  display: inline-block;
+  position: relative;
 }
+
+  .s-filtrable-input__list {
+    position: absolute;
+    top: 100%; left:0;
+    background: Sugar.color(primary);
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: height .2s ease-in-out;
+
+    .s-filtrable-input--ontop & {
+      bottom: 100%;
+      top: initial;
+    }
+
+  }
+
+  .s-filtrable-input__list-item {
+    padding: Sugar.lnf(padding);
+  }
+
+  .s-filtrable-input__list-item__highlighted {
+    color: red;
+    font-weight: bold;
+  }
