--- a/util/sugar/src/scss/core/class/_all.scss
+++ b/util/sugar/src/scss/core/class/_all.scss
@@ -1,3 +1,7 @@
 @import "classes";
-@import "init-classes";
+@import "init";
 @import "register-class";
+
+@import "helper/all";
+@import "icons/all";
+@import "lnf/all";
