--- a/webcomponents/s-filtrable-input/src/scss/index.scss
+++ b/webcomponents/s-filtrable-input/src/scss/index.scss
@@ -3,8 +3,11 @@
 
 @include style();
 
+@include Sugar.classes();
 
 .s-filtrable-input__list {
+
+  @include Sugar.icon(fa-user);
 
   left: 300px !important;
 
