--- a/util/sugar/src/scss/core/_init.scss
+++ b/util/sugar/src/scss/core/_init.scss
@@ -1,4 +1,3 @@
-@use 'variables' as sugar;
 @use 'sass:meta';
 $_sugar-inited: false;
 /**
@@ -33,7 +32,7 @@ $_sugar-inited: false;
     // @include init-dom-settings();
 
     // settings to css variables
-    @include init-settings-to-css-variables();
+    // @include init-settings-to-css-variables();
 
     // // border box
     @if setting("border-box") == true {
@@ -51,9 +50,6 @@ $_sugar-inited: false;
 
     // typography
     @include init-typography();
-
-    // modular scale
-    @include init-modular-scale();
 
   }
 }
