--- a/util/sugar/src/scss/core/setting/_setting.scss
+++ b/util/sugar/src/scss/core/setting/_setting.scss
@@ -44,6 +44,11 @@
     @return $default;
   }
 
+  // trim the value if is a string
+  @if type-of($value) == string {
+    $value: str-trim($value);
+  }
+
   // @if meta.type-of($value) == 'list' {
   //   $stringValue: str-trim(inspect($value));
   //   @if string.slice($stringValue,0,2) == '""' {
